  . Fixed bug #72218 (If host name cannot be resolved then PHP 7 crashes). 
    (Esminis at esminis dot lt)

- Intl:
  . Fixed bug #64524 (Add intl.use_exceptions to php.ini-*). (Anatol)

- PCRE:
  . Fixed bug #72143 (preg_replace uses int instead of size_t). (Joe)

- PDO_pgsql:
  . Fixed bug #71573 (Segfault (core dumped) if paramno beyond bound).
    (Laruence)

- Postgres:
  . Fixed bug #72195 (pg_pconnect/pg_connect cause use-after-free). (Laruence)
  . Fixed bug #72197 (pg_lo_create arbitrary read). (Anatol)

- Standard:
  . Fixed bug #72229 (Wrong reference when serialize/unserialize an object).
    (Laruence)
  . Fixed bug #72193 (dns_get_record returns array containing elements of
    type 'unknown'). (Laruence)
  . Fixed bug #72017 (range() with float step produces unexpected result).
    (Thomas Punt)

- XML:
  . Fixed #72206 (xml_parser_create/xml_parser_free leaks mem). (Joe)

- XMLRPC:
  . Fixed #72155 (use-after-free caused by get_zval_xmlrpc_type). (Joe)

26 May 2016 PHP 7.0.7

- Core:
  . Fixed bug #72162 (use-after-free - error_reporting). (Laruence)
  . Add compiler option to disable special case function calls. (Joe)
  . Fixed bug #72101 (crash on complex code). (Dmitry)
  . Fixed bug #72100 (implode() inserts garbage into resulting string when
    joins very big integer). (Mikhail Galanin)
  . Fixed bug #72057 (PHP Hangs when using custom error handler and typehint).
    (Nikita Nefedov)
  . Fixed bug #72038 (Function calls with values to a by-ref parameter don't
    always throw a notice). (Bob)
  . Fixed bug #71737 (Memory leak in closure with parameter named $this).
    (Nikita)
  . Fixed bug #72059 (?? is not allowed on constant expressions). (Bob, Marcio)
  . Fixed bug #72159 (Imported Class Overrides Local Class Name). (Nikita)

- Curl:
  . Fixed bug #68658 (Define CURLE_SSL_CACERT_BADFILE). (Pierrick)

- DBA:
  . Fixed bug #72157 (use-after-free caused by dba_open). (Shm, Laruence)

- GD: