@@ -17,6 +17,9 @@ PHP                                                                        NEWS
   . Fixed bug #71573 (Segfault (core dumped) if paramno beyond bound).
     (Laruence)
 
+- Phpdbg:
+  . Fixed bug #72284 (phpdbg fatal errors with coverage). (Bob)
+
 - Postgres:
   . Fixed bug #72195 (pg_pconnect/pg_connect cause use-after-free). (Laruence)
   . Fixed bug #72197 (pg_lo_create arbitrary read). (Anatol)
